# apiary-benchmark

./: .gitignore  README.md  apiary-benchmark.cabal
results/1/: pkg.txt  result.md
results/2/: pkg.txt  result.md
scripts/: aggregate.sh  all.sh  bench.sh  collect.py  laggregate.sh  plot.gnuplot  plot.sh
src/: Spock.hs  apiary.hs  scotty.hs  wai-routes.hs  yesod.hs
