name:                apiary-benchmark
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  bench.sh
                   , all.sh
                   , average.awk
                   , stdev.awk
cabal-version:       >=1.10

flag apiary
  default: False
flag scotty
  default: False
flag Spock
  default: False
flag yesod-core
  default: False

executable apiary
  main-is:             apiary.hs
  if flag(apiary)
    build-depends:       base >=4.7 && <4.8
                       , apiary >=0.18
                       , transformers
                       , warp
                       , bytestring
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable scotty
  main-is:             scotty.hs
  if flag(scotty)
    build-depends:       base >=4.7 && <4.8
                       , scotty >=0.9
                       , bytestring
    buildable: True
  else
    buildable: False

  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable Spock
  main-is:             Spock.hs
  if flag(Spock)
    build-depends:       base >=4.7 && <4.8
                       , Spock >=0.7.0
                       , text
                       , bytestring
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010

executable yesod-core
  main-is:             yesod.hs
  if flag(yesod-core)
    build-depends:       base >=4.7 && <4.8
                       , yesod-core >= 1.4.2
                       , warp
                       , transformers
                       , text
                       , bytestring
                       , resourcet
                       , wai
                       , http-types
                       , blaze-builder
    buildable: True
  else
    buildable: False
  ghc-options:         -Wall -O2 -threaded
  hs-source-dirs:      src
  default-language:    Haskell2010
